# padel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
app/: app.py  core.py
app/components/: dashboard.py  map_view.py
data/processed/: city_stats.csv  facilities.csv
docs/: 2improve.md  prd.md  prompts.md  story-2.1-implementation-summary.md  technical-design.md
examples/: collect_facilities.py  example_indoor_outdoor_analyzer.py  test_google_trends.py
scripts/: __init__.py  collect_data.py  process_data.py
src/: __init__.py  config.py
src/analyzers/: aggregator.py  distance.py  scorer.py
src/collectors/: __init__.py  google_places.py  google_trends.py  review_collector.py
src/enrichers/: __init__.py  base_llm.py  indoor_outdoor_analyzer.py
src/models/: __init__.py  city.py  facility.py
stories/: story-0.0-development-setup.md  story-0.1-data-models.md  story-0.2-configuration-management.md  story-0.3-caching-utilities.md  story-1.1-google-places-collector.md  story-1.2-review-collector.md  story-1.3-google-trends-collector.md  story-2.1-llm-indoor-outdoor-analyzer.md  story-3.1-data-cleaner.md  story-3.2-deduplicator.md  story-4.1-city-aggregator.md  story-4.2-distance-calculator.md  story-4.3-opportunity-scorer.md  story-5.1-data-collection-cli.md  story-5.2-data-processing-cli.md  story-6.1-streamlit-main-app.md  story-6.2-interactive-map-component.md  story-6.3-dashboard-charts.md  story-6.4-export-functionality.md  story-7.1-integration-tests.md  story-7.2-documentation.md  story-8.1-deployment-packaging.md  story-9.0-opportunity-score-improvements-overview.md  story-9.1-fix-zero-facility-cities-aggregation.md  story-9.2-add-city-center-coordinates.md  story-9.3-fix-distance-calculation-zero-facility-cities.md  story-9.4-step-based-geographic-gap-normalization.md  story-9.5-robust-normalization-optional.md  story-improvements-summary.md
tests/: test_config.py  test_setup.py
(+26 files in other folders)
